--- a/admin/index/homePage.html
+++ b/admin/index/homePage.html
@@ -61,7 +61,7 @@
               <p style="color:black">Đơn hàng</p>
             </div>
           </a>
-          <a href="analyzePage.php" style="text-decoration: none; color: black;">
+          <a href="analyzePage.html" style="text-decoration: none; color: black;">
             <div class="container-function-selection">
               <button class="button-function-selection">
                 <i class="fa-solid fa-chart-simple" style="font-size: 20px; color: #FAD4AE;"></i>
@@ -171,7 +171,7 @@
         <p>Đơn hàng</p>
       </div>
     </a>
-    <a href="analyzePage.php" style="text-decoration: none; color: black;">
+    <a href="analyzePage.html" style="text-decoration: none; color: black;">
       <div class="container-function-selection">
         <button class="button-function-selection">
           <i class="fa-solid fa-chart-simple" style="font-size: 20px; color: #FAD4AE;"></i>
