--- a/admin/index/analyzePage.html
+++ b/admin/index/analyzePage.html
@@ -90,7 +90,7 @@
               <p>Thống kê</p>
             </div>
           </a>
-          <a href="accountPage.html" style="text-decoration: none; color: black;">
+          <a href="accountPage.php" style="text-decoration: none; color: black;">
             <div class="container-function-selection">
               <button class="button-function-selection">
                 <i class="fa-solid fa-circle-user" style="
@@ -109,7 +109,7 @@
       <p class="header-left-title">Thống kê</p>
     </div>
     <div class="header-middle-section">
-      <img class="logo-store" src="../../assets/images/LOGO-2.png">
+      <img class="logo-store" src="../../assets/images/LOGO-2.jpg">
     </div>
     <div class="header-right-section">
       <div class="bell-notification">
@@ -145,7 +145,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
-          <a href="accountPage.html" class="navbar_user">
+          <a href="accountPage.php" class="navbar_user">
             <i class="fa-solid fa-user"></i>
             <p>Thông tin cá nhân </p>
           </a>
@@ -224,7 +224,7 @@
           <p>Thống kê</p>
         </div>
       </a>
-      <a href="accountPage.html" style="text-decoration: none; color: black;">
+      <a href="accountPage.php" style="text-decoration: none; color: black;">
         <div class="container-function-selection">
           <button class="button-function-selection">
             <i class="fa-solid fa-circle-user" style="
@@ -278,7 +278,7 @@
         </div>
       </div>
     </div>
-
+ 
     <!-- Container 2: Mặt hàng và các mục bán chạy/ế -->
     <div class="container" style="margin-top: 3rem;">
       <h1>Thống Kê Mặt Hàng Bán Ra</h1>
