--- a/admin/index/customer.html
+++ b/admin/index/customer.html
@@ -66,7 +66,7 @@
                   <p>Thống kê</p>
                 </div>
               </a>
-              <a href="accountPage.html" style="text-decoration: none; color: black;">
+              <a href="accountPage.php" style="text-decoration: none; color: black;">
                 <div class="container-function-selection">
                   <button class="button-function-selection">
                     <i class="fa-solid fa-circle-user" style="font-size: 20px; color: #FAD4AE;"></i>
@@ -81,7 +81,7 @@
           <p class="header-left-title">Khách hàng</p>
         </div>
         <div class="header-middle-section">
-          <img class="logo-store" src="../../assets/images/LOGO-2.png">
+          <img class="logo-store" src="../../assets/images/LOGO-2.jpg">
         </div>
         <div class="header-right-section">
           <div class="bell-notification">
@@ -110,7 +110,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-              <a href="accountPage.html" class="navbar_user">
+              <a href="accountPage.php" class="navbar_user">
                 <i class="fa-solid fa-user"></i>
                 <p>Thông tin cá nhân</p>
               </a>
@@ -175,7 +175,7 @@
             <p>Thống kê</p>
           </div>
         </a>
-        <a href="accountPage.html" style="text-decoration: none; color: black;">
+        <a href="accountPage.php" style="text-decoration: none; color: black;">
           <div class="container-function-selection">
             <button class="button-function-selection">
               <i class="fa-solid fa-circle-user" style="font-size: 20px; color: #FAD4AE;"></i>
