--- a/admin/index/test.html
+++ b/admin/index/test.html
@@ -89,7 +89,7 @@
                   <p>Thống kê</p>
                 </div>
               </a>
-              <a href="accountPage.html" style="text-decoration: none; color: black;">
+              <a href="accountPage.php" style="text-decoration: none; color: black;">
                 <div class="container-function-selection">
                   <button class="button-function-selection">
                     <i class="fa-solid fa-circle-user" style="
@@ -144,7 +144,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-              <a href="accountPage.html" class="navbar_user">
+              <a href="accountPage.php" class="navbar_user">
                 <i class="fa-solid fa-user"></i>
                 <p>Thông tin cá nhân </p>
               </a>
@@ -223,7 +223,7 @@
                 <p>Thống kê</p>
               </div>
             </a>
-            <a href="accountPage.html" style="text-decoration: none; color: black;">
+            <a href="accountPage.php" style="text-decoration: none; color: black;">
               <div class="container-function-selection">
                 <button class="button-function-selection">
                   <i class="fa-solid fa-circle-user" style="
