--- a/admin/index/wareHouse.html
+++ b/admin/index/wareHouse.html
@@ -187,7 +187,7 @@
                   <p>Thống kê</p>
                 </div>
               </a>
-              <a href="accountPage.html" style="text-decoration: none; color: black;">
+              <a href="accountPage.php" style="text-decoration: none; color: black;">
                 <div class="container-function-selection">
                   <button class="button-function-selection">
                     <i class="fa-solid fa-circle-user" style="font-size: 20px; color: #FAD4AE;"></i>
@@ -202,7 +202,7 @@
           <p class="header-left-title">Kho hàng</p>
         </div>
         <div class="header-middle-section">
-          <img class="logo-store" src="../../assets/images/LOGO-2.png">
+          <img class="logo-store" src="../../assets/images/LOGO-2.jpg">
         </div>
         <div class="header-right-section">
           <div class="bell-notification">
@@ -232,7 +232,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-              <a href="accountPage.html" class="navbar_user">
+              <a href="accountPage.php" class="navbar_user">
                 <i class="fa-solid fa-user"></i>
                 <p>Thông tin cá nhân </p>
               </a>
@@ -298,7 +298,7 @@
                 <p>Thống kê</p>
               </div>
             </a>
-            <a href="accountPage.html" style="text-decoration: none; color: black;">
+            <a href="accountPage.php" style="text-decoration: none; color: black;">
               <div class="container-function-selection">
                 <button class="button-function-selection">
                   <i class="fa-solid fa-circle-user" style="font-size: 20px; color: #FAD4AE;"></i>
