--- a/admin/index/analyzePage.html
+++ b/admin/index/analyzePage.html
@@ -322,6 +322,17 @@
   </div>
   <script src="../js/analyzePage.js"></script>
   <script src ="../js/checklog.js"></script>
+  <script>
+document.addEventListener('DOMContentLoaded', () => {
+    const cachedUserInfo = localStorage.getItem('userInfo');
+    if (cachedUserInfo) {
+        const userInfo = JSON.parse(cachedUserInfo);
+        document.querySelector('.name-employee p').textContent = userInfo.fullname;
+        document.querySelector('.position-employee p').textContent = userInfo.role;
+        document.querySelectorAll('.avatar').forEach(img => img.src = userInfo.avatar);
+    }
+});
+</script>
 </body>
 
 </html>
