--- a/admin/index/wareHouse.html
+++ b/admin/index/wareHouse.html
@@ -266,8 +266,7 @@
         aria-controls="offcanvasExample"></i>
       <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample"
         aria-labelledby="offcanvasExampleLabel">
-        <div style="border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: rgb(176, 176, 176);"
-          class="offcanvas-header">
+        <div style="border-bottom: 1px solid rgb(176, 176, 176);" class="offcanvas-header">
           <h5 class="offcanvas-title" id="offcanvasExampleLabel">Mục lục</h5>
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
@@ -279,55 +278,13 @@
               </button>
               <p>Trang chủ</p>
             </div>
-            <div class="offcanvas-body">
-              <a href="homePage.html" style="text-decoration: none; color: black;">
-                <div class="container-function-selection">
-                  <button class="button-function-selection">
-                    <i class="fa-solid fa-house" style="font-size: 20px; color: #FAD4AE;"></i>
-                  </button>
-                  <p>Trang chủ</p>
-                </div>
-              </a>
-              <a href="wareHouse.html" style="text-decoration: none; color: black;" >
-                <div class="container-function-selection">
-                  <button class="button-function-selection" style="background-color: #6aa173;">
-                    <i class="fa-solid fa-warehouse" style="font-size: 20px; color: #FAD4AE;"></i>
-                  </button>
-                  <p>Kho hàng</p>
-                </div>
-              </a>
-              <a href="customer.html" style="text-decoration: none; color: black;">
-                <div class="container-function-selection">
-                  <button class="button-function-selection">
-                    <i class="fa-solid fa-users" style="font-size: 20px; color: #FAD4AE;"></i>
-                  </button>
-                  <p style="color: black; text-align: center; font-size: 10x;">Khách hàng</p>
-                </div>
-              </a>
-              <a href="orderPage.html" style="text-decoration: none; color: black;">
-                <div class="container-function-selection">
-                  <button class="button-function-selection">
-                    <i class="fa-solid fa-list-check" style="font-size: 18px; color: #FAD4AE;"></i>
-                  </button>
-                  <p style="color:black">Đơn hàng</p>
-                </div>
-              </a>
-              <a href="analyzePage.html" style="text-decoration: none; color: black;">
-                <div class="container-function-selection">
-                  <button class="button-function-selection">
-                    <i class="fa-solid fa-chart-simple" style="font-size: 20px; color: #FAD4AE;"></i>
-                  </button>
-                  <p>Thống kê</p>
-                </div>
-              </a>
-              <a href="accountPage.php" style="text-decoration: none; color: black;">
-                <div class="container-function-selection">
-                  <button class="button-function-selection">
-                    <i class="fa-solid fa-circle-user" style="font-size: 20px; color: #FAD4AE;"></i>
-                  </button>
-                  <p style="color:black">Tài khoản</p>
-                </div>
-              </a>
+          </a>
+          <a href="wareHouse.html" style="text-decoration: none; color: black;">
+            <div class="container-function-selection">
+              <button class="button-function-selection" style="background-color: #6aa173;">
+                <i class="fa-solid fa-warehouse" style="font-size: 20px; color: #FAD4AE;"></i>
+              </button>
+              <p>Kho hàng</p>
             </div>
           </a>
           <a href="customer.html" style="text-decoration: none; color: black;">
@@ -354,7 +311,7 @@
               <p>Thống kê</p>
             </div>
           </a>
-          <a href="accountPage.html" style="text-decoration: none; color: black;">
+          <a href="accountPage.php" style="text-decoration: none; color: black;">
             <div class="container-function-selection">
               <button class="button-function-selection">
                 <i class="fa-solid fa-circle-user" style="font-size: 20px; color: #FAD4AE;"></i>
@@ -377,55 +334,42 @@
       </div>
       <div>
         <div class="position-employee">
-          <p>Nhân viên</p>
+          <p id="employee-role">Chức vụ</p>
         </div>
-        <div class="header-middle-section">
-          <img class="logo-store" src="../../assets/images/LOGO-2.jpg">
+        <div class="name-employee">
+          <p id="employee-name">Ẩn danh</p>
         </div>
-        <div class="header-right-section">
-          <div class="bell-notification">
-            <i class="fa-regular fa-bell" style="color: #64792c; font-size: 45px; width:100%;"></i>
+      </div>
+      <div>
+        <img class="avatar" src="../../assets/images/admin.jpg" alt="" data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
+      </div>
+      <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
+        aria-labelledby="offcanvasWithBothOptionsLabel">
+        <div style="border-bottom: 1px solid rgb(176, 176, 176);" class="offcanvas-header">
+          <img class="avatar" src="../../assets/images/admin.jpg" alt="">
+          <div class="admin">
+            <h4 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Username</h4>
+            <h5 id="employee-displayname">Họ tên</h5>
           </div>
-          <div>
-            <div class="position-employee">
-              <p id="employee-role">Chức vụ</p>
-            </div>
-            <div class="name-employee">
-              <p id="employee-name">Ẩn danh</p>
-            </div>
-          </div>
-          <div>
-            <img class="avatar" src="../../assets/images/admin.jpg" alt="" data-bs-toggle="offcanvas"
-              data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
-          </div>
-          <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
-            aria-labelledby="offcanvasWithBothOptionsLabel">
-            <div style="border-bottom: 1px solid rgb(176, 176, 176);" class="offcanvas-header">
-              <img class="avatar" src="../../assets/images/admin.jpg" alt="">
-              <div class="admin">
-                <h4 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Username</h4>
-                <h5 id="employee-displayname">Họ tên</h5>  <!-- Thêm id ở đây -->
-              </div>
-              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-              <a href="accountPage.php" class="navbar_user">
-                <i class="fa-solid fa-user"></i>
-                <p>Thông tin cá nhân </p>
-              </a>
-              <a href="#logoutModal" class="navbar_logout">
-                <i class="fa-solid fa-right-from-bracket"></i>
-                <p>Đăng xuất</p>
-              </a>
-              <div id="logoutModal" class="modal">
-                <div class="modal_content">
-                  <h2>Xác nhận đăng xuất</h2>
-                  <p>Bạn có chắc chắn muốn đăng xuất không?</p>
-                  <div class="modal_actions">
-                    <a href="../php/logout.php" class="btn_2 confirm">Đăng xuất</a>
-                    <a href="#" class="btn_2 cancel">Hủy</a>
-                  </div>
-                </div>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <a href="accountPage.php" class="navbar_user">
+            <i class="fa-solid fa-user"></i>
+            <p>Thông tin cá nhân</p>
+          </a>
+          <a href="#logoutModal" class="navbar_logout">
+            <i class="fa-solid fa-right-from-bracket"></i>
+            <p>Đăng xuất</p>
+          </a>
+          <div id="logoutModal" class="modal">
+            <div class="modal_content">
+              <h2>Xác nhận đăng xuất</h2>
+              <p>Bạn có chắc chắn muốn đăng xuất không?</p>
+              <div class="modal_actions">
+                <a href="../php/logout.php" class="btn_2 confirm">Đăng xuất</a>
+                <a href="#" class="btn_2 cancel">Hủy</a>
               </div>
             </div>
           </div>
@@ -477,7 +421,7 @@
         <p>Thống kê</p>
       </div>
     </a>
-    <a href="accountPage.html" style="text-decoration: none; color: black;">
+    <a href="accountPage.php" style="text-decoration: none; color: black;">
       <div class="container-function-selection">
         <button class="button-function-selection">
           <i class="fa-solid fa-circle-user" style="font-size: 20px; color: #FAD4AE;"></i>
@@ -628,7 +572,19 @@
 
   <script src="./asset/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="../js/add-product.js"></script>
+  <script src="../js/checklog.js"></script>
   <!-- <script src="../js/hienthisanpham_khohang.js"></script> -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const cachedUserInfo = localStorage.getItem('userInfo');
+      if (cachedUserInfo) {
+        const userInfo = JSON.parse(cachedUserInfo);
+        document.querySelector('.name-employee p').textContent = userInfo.fullname;
+        document.querySelector('.position-employee p').textContent = userInfo.role;
+        document.querySelectorAll('.avatar').forEach(img => img.src = userInfo.avatar);
+      }
+    });
+  </script>
 </body>
 
 </html>
